--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node_random_string_cli",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "nodejs command line tool for generating random string.",
   "main": "index.js",
   "scripts": {
@@ -10,7 +10,11 @@
     "random",
     "string",
     "random_string",
-    "random_string_cli"
+    "random_string_cli",
+    "cli-app",
+    "str",
+    "rand",
+    "token"
   ],
   "repository": {
     "type": "git",
